tests/build/cases/widget_new/incorrect_when_expr_type1.stderr
error[E0308]: mismatched types
  --> cases/widget_new/incorrect_when_expr_type1.rs:10:14
   |
10 |         when *#margin {
   |              ^^^^^^^^ expected `bool`, found struct `SideOffsets`
